feat: 월별 통계 분석 API 및 취향 분석 로직 구현
- 카테고리/장르별 빈도수 기반 topCategory 추출
- 전월 대비 활동 성장률 계산 알고리즘 추가
- 공동 1위 및 데이터 부재(Zero-state) 예외 처리 로직 반영