@@ -12,6 +12,7 @@ import book_log.demo.dto.response.StatisticsResponse;
 import book_log.demo.dto.response.StatisticsResponse.CategoryStat;
 import book_log.demo.dto.response.StatisticsResponse.GenreStat;
 import book_log.demo.repository.ContentRepository;
+import book_log.demo.repository.ContentRepository.CategoryStatInterface;
 import lombok.RequiredArgsConstructor;
 
 @Service
@@ -36,11 +37,11 @@ public class StatisticsService {
         // 4. Interface 결과를 DTO로 변환 (Stream API 활용)
         List<CategoryStat> categoryStats = categoryResults.stream()
                 .map(r -> new CategoryStat(r.getCategory(), r.getCount()))
-                .collect(Collectors.toList());
+                .toList();
 
         List<GenreStat> genreStats = genreResults.stream()
                 .map(r -> new GenreStat(r.getGenre(), r.getCount()))
-                .collect(Collectors.toList());
+                .toList();
 
         // 5. 평균 별점 가공
         Double rawAvgRating = contentRepository.getAverageRating(currentMonth);
@@ -52,21 +53,24 @@ public class StatisticsService {
         double growthRate = calculateGrowthRate(currentCount, previousCount);
 
         // 7. topCategory 추출
-        String topCategory = categoryStats.isEmpty() ? "없음" : categoryStats.get(0).getCategory();
+        String topCategory = categoryStats.isEmpty() ? "기록 없음" : categoryStats.get(0).getCategory();
 
         // 8. mostActiveDay 가공
-        String mostActiveDay = "데이터 없음";
+        String mostActiveDay = "기록 없음";
         Object[] dayResult = contentRepository.findMostActiveDay(currentMonth);
-        if (dayResult != null && dayResult.length > 0) {
+
+        if (dayResult != null && dayResult.length > 0 && dayResult[0] != null) {
             // PostgreSQL DOW: 0(일) ~ 6(토)
             // nativeQuery 결과는 [ [dow, count] ] 형태의 2차원 배열로 올 수 있음
-            Object[] row = (Object[]) dayResult[0];
-            int dow = ((Number) row[0]).intValue();
-            mostActiveDay = convertDowToKorean(dow);
+            Object rowObj = dayResult[0];
+            if (rowObj instanceof Object[] row) {
+                int dow = ((Number) row[0]).intValue();
+                mostActiveDay = convertDowToKorean(dow);
+            }
         }
 
         // 9. tasteAnalysis 메시지 생성
-        String tasteAnalysis = generateTasteAnalysis(categoryStats, topCategory);
+        String tasteAnalysis = generateTasteAnalysis(topCategory, categoryStats);
 
         // 결과 조립
         return StatisticsResponse.builder()
@@ -96,11 +100,25 @@ public class StatisticsService {
         return days[dow];
     }
 
-    private String generateTasteAnalysis(List<CategoryStat> stats, String top) {
-        if (stats.isEmpty()) return "기록을 시작하여 취향을 분석해 보세요!";
-        if (stats.size() >= 2) {
-            return String.format("이번 달은 %s보다 %s에 더 몰입하셨네요!", stats.get(1).getCategory(), top);
+    private String generateTasteAnalysis(String topCategory, List<CategoryStat> stats) {
+        // 1. 데이터가 아예 없는 경우
+        if (stats == null || stats.isEmpty()) {
+            return "기록을 시작하여 취향을 분석해 보세요!";
         }
-        return String.format("이번 달은 %s에 집중하신 한 달이었군요!", top);
+
+        // 2. 데이터가 2종류 이상일 때 공동 1위 여부 체크
+        if (stats.size() >= 2) {
+            // Interface가 아니라 DTO인 CategoryStat을 사용합니다.
+            CategoryStat first = stats.get(0);
+            CategoryStat second = stats.get(1);
+
+            // CategoryStat DTO의 필드명(count)과 게터(getCount())를 사용합니다.
+            if (!first.getCount().equals(second.getCount())) {
+                return "이번 달은 " + second.getCategory() + "보다 " + first.getCategory() + "에 더 몰입하셨네요!";
+            }
+        }
+
+        // 3. 데이터가 1종류뿐이거나, 공동 1위인 경우
+        return "이번 달은 " + topCategory + "에 집중하신 한 달이었군요!";
     }
 }
